# automated-android-build

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app_profile.h  automate.sh  buildtab.cpp  buildtab.h  compile_commands.json  githubactionstab.cpp  githubactionstab.h  mainwindow.cpp  mainwindow.h  profilestore.h  savedata.h  savesystem.cpp  savesystem.h  vb_data.h  vb_savesystem.cpp  vb_savesystem.h  versionbumperwidget.cpp  versionbumperwidget.h
.github/workflows/: release.yml
.zed/: tasks.json
docs/superpowers/plans/: 2026-06-30-github-actions-generator.md  2026-07-01-project-architecture.md
docs/superpowers/specs/: 2026-06-30-github-actions-generator-design.md  2026-07-01-project-architecture.md
